Cleanup and finish turn() logic in Gameplay class. Cleanup takeOneCardFromOpponent() in Hand class. D: Anna N: Lisa